tried my best to prevent portfolio section from overflowing and fix the weird white space at right on certain screens

--- a/styles.css
+++ b/styles.css
@@ -235,7 +235,7 @@ section {
         max-height: 100%;
 
         display: block;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
     section {
         height: auto;
@@ -339,22 +339,13 @@ section {
     display: grid;
     grid-gap: 30px;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-auto-rows: 225px;
     margin-top: 35px; 
 }
 
 @media (min-width: 1024px) {
     .portfolio-container {
         max-width: 800px;
-    }
-}
-
-@media (min-width: 1025px) {
-    .portfolio-container {
-        margin-top: 120px;
-    }
-    .portfolio-content {
-        margin-bottom: 40px;
+        margin-top: 20px;
     }
 }
 
